--- a/views/accepted.html
+++ b/views/accepted.html
@@ -28,8 +28,6 @@
   firebase.analytics();
 
 	</script>
-  <meta name = "author" content = "SoJS">
-  <meta name = "description" content = "A nice list of all pleas for help.">
 	<link rel="stylesheet" href="./css/tag-display.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,9 +36,9 @@
 	</script>
 	<link rel="stylesheet" href="../css/home.css">
 	<link rel="stylesheet" href="./css/pleas-search.css">
-  <link href="./css/dark-theme.css" rel="stylesheet">
+
 	
-	<title>Pleas - Help!</title>
+	<title>Help! - Accept</title>
 
 	<style>
 		.bd-placeholder-img {
@@ -59,44 +57,20 @@
 	</style>
 </head>
 
-<body  class = "bgdark">
-	{% include "./header.html" %}
-
-
-<main style = "margin: 20px; color: #eee;">
-
-  
-  
-  <div style = "text-align: center;  padding-bottom: 6px; width: 50%;position: relative; left: 25%; right: 25%;"><h1 class = "display-3" >Pleas</h1><span  class = "text-muted">Search for a plea</span>
-  <form action = "search" method = "GET" class = "form-inline">
-    <div class="form-group mx-sm-3 mb-2">
-    <input class="form-control" id="q" placeholder="Search"  name = "q">
-    <span class = "text-muted">Separate Tags with spaces. Enter to search</span>
-    </div>
-  </div>
-  
-  </form>
-  <div class = "container-fluid">
-  <!-- Cards -->
-  {% for plea in pleas %}
-    <div class="card-body">
-      <h5 class="card-title">{{ plea.title }}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">@{{ plea.author }}</h6>
-      <p class="card-text">{{ plea.shortDes }}</p>
-      <p class = "text-muted">Tags</p>
-      <ul class = "tags">
-      {% for tag in plea.tags %}
-        <a href = "/search?q={{ tag }}"><li class = "tag">{{ tag }}</li></a>
-      {% endfor %}
-      </ul>
-      <a href="/plea/{{ plea.key }}" class="btn btn-primary">View</a>
-      </div>
-      <hr>
-  {% endfor %}
+<body>
+{% include "./header.html" %}
+<main style = "margin: 20px;">
+  <div class = "text-center"><h1 class = "display-3">{{ message }}</h1>
+  {% if success %}
+  <p class = "text-muted">{{ errorText }}</p>
+  {% else %}
+  <p class = "text-muted">You have succesfully accepted <i>{{ accepted }}</i> help you work on <i>{{ pleaTitle }}</i>. He should join you on your repl soon.</p>
+  {% endif %}
   </div>
   <footer class="container">
-    <p class="float-end"><a href="#">Back to top</a></p>
     {% include "./footer.html" %}
+    <p>&copy; 2021 SoJS &middot; <a href="/site/privacy">Privacy</a> &middot; <a href="/site/terms">Terms</a></p>
   </footer>
 </main>
 </body>
+</html>
