--- a/views/auth.html
+++ b/views/auth.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>More Repl.it Authentication</title>
+    <title>Verify Your Identity</title>
     <style>
       .iframe{
         width:100%;
