--- a/views/css/plea.css
+++ b/views/css/plea.css
@@ -1,85 +1,6 @@
-blockquote{
-  display:block;
-  background: #fff;
-  padding: 15px 20px 15px 45px;
-  margin: 0 0 20px;
-  position: relative;
-  
-  /*Font*/
-  font-family: Georgia, serif;
-  font-size: 16px;
-  line-height: 1.2;
-  color: #666;
-  text-align: justify;
-  
-  /*Borders - (Optional)*/
-  border-left: 15px solid #8b8783;
-  border-right: 2px solid #8b8783;
+a{
+  text-decoration: none !important
 }
-
-blockquote::before{  
-  /*Font*/
-  font-family: Georgia, serif;
-  font-size: 60px;
-  font-weight: bold;
-  color: #999;
-  
-  /*Positioning*/
-  position: absolute;
-  left: 10px;
-  top:5px;
-}
-
-
-blockquote a{
-  text-decoration: none;
-  background: #eee;
-  cursor: pointer;
-  padding: 0 3px;
-  color: #999;
-}
-
-blockquote a:hover{
- color: #666;
-}
-
-blockquote em{
-  font-style: italic;
-}
-code {
-  display: block;
-  background: none;
-  white-space: pre;
-  -webkit-overflow-scrolling: touch;
-  overflow-x: scroll;
-  max-width: 100%;
-  min-width: 100px;
-  background: #FFEFF0;
-  word-wrap: break-word;
-  box-decoration-break: clone;
-  padding: .1rem .3rem .2rem;
-  border-radius: .2rem;
-  color: #DD3687;
-}
-pre{
-  display: block;
-  background: none;
-  white-space: pre;
-  -webkit-overflow-scrolling: touch;
-  overflow-x: scroll;
-  max-width: 100%;
-  min-width: 100px;
-  background: #FFEFF0;
-  word-wrap: break-word;
-  box-decoration-break: clone;
-  padding: .1rem .3rem .2rem;
-  border-radius: .2rem;
-  color: #DD3687;
-}
-.des a{
-  text-decoration: none;
-  color: dodgerblue;
-}
-.des a:hover{
-  text-decoration: underline;
+a:hover{
+  text-decoration: none !important;
 }
