--- a/views/replauth.html
+++ b/views/replauth.html
@@ -33,8 +33,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel='stylesheet' href='./css/sign.css'>
 	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>Help! - Sign Up</title>
+	<meta name="author" content="SoJS">
+
+	<title>Help! - Verify</title>
+
+
 	<link href="./css/bootstrap.min.css" rel="stylesheet">
 	<link href="./css/home.css" rel="stylesheet">
 	<link href="./css/sign.css" rel="stylesheet" />
@@ -42,54 +45,22 @@
 </head>
 
 <body>
-	<header>
-		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="/">Help!</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" 
-            aria-current="page" href="/signup">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="/pleas" >Posts</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <a class = "btn btn-primary" href="/new">+ New</a>
-        </form>
-      </div>
-    </div>
-  </nav>
-</header>
-
-<div class="signup-form">
-    
-		<h2>Sign Up</h2>
-		<p>Do not worry, this information is not stored on a server nor on the client. </p>
+{% include "./header.html" %}
+<div class = "signup-form">
+<form action="#"class = "form">
+		<h2>Verify Your Identity</h2>
+		<p>Before you can post on help, we need to know who you are.</p>
 		<hr>
-        <div class="form-group">
-          
-   
-        </div>
-		
 		<div class="form-group">
-            <button id = "auth" class="btn btn-primary btn-lg">Authenticate</button>
+            <button class="btn btn-primary btn-lg" id = "auth" >Verify</button>
         </div>
-	
+    </form>
 </div>
   
 
     <footer class="container">
     
-    <p>&copy; 2021 SoJS &middot; <a href="/site/privacy">Privacy</a> &middot; <a href="/site/terms">Terms</a></p>
+     {% include "./footer.html" %}
   </footer>
 
     <!-- Bootstrap core JavaScript
